--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.0.1",
   "description": "AngularJs project structure",
   "devDependencies": {
+    "chai": "^1.10.0",
+    "chromedriver": "^2.12.0",
+    "http-server": "^0.7.3",
     "karma-cli": "0.0.4",
     "karma-coverage": "^0.2.6",
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon-chai": "^0.2.0",
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "phantomjs": "^1.9.12",
+    "protractor": "^1.4.0",
+    "webdriver-manager": "^1.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/karma-cli/bin/karma start karma.conf.js",
+    "start": "node_modules/http-server/bin/http-server -a localhost -p 8000"
   },
   "repository": {
     "type": "git",
