--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-resource": "1.3",
     "angular-mocks": "1.3",
     "underscore": "*",
-    "angular-ui-router": "0.2"
+    "angular-ui-router": "0.2",
+    "angularAMD": "~0.2.1"
   }
 }
