--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "karma-coverage": "^0.2.6",
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
     "karma-sinon-chai": "^0.2.0",
     "mocha": "^2.0.1",
     "phantomjs": "^1.9.12",
     "protractor": "^1.4.0",
+    "requirejs": "^2.1.15",
     "webdriver-manager": "^1.0.0"
   },
   "scripts": {
