--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "devDependencies": {
     "chai": "^1.10.0",
     "chromedriver": "^2.12.0",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-html-angular-validate": "^0.4.0",
     "http-server": "^0.7.3",
     "karma-cli": "0.0.4",
     "karma-coverage": "^0.2.6",
