--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "AngularJs project structure",
   "devDependencies": {
     "chai": "^1.10.0",
+    "chai-as-promised": "^4.1.1",
     "chromedriver": "^2.12.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
