--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,10 @@
     "angularAMD": "~0.2.1"
   },
   "devDependencies": {
-    "requirejs-text": "~2.0.12"
+    "requirejs-text": "~2.0.12",
+    "angular-jwt": "~0.0.6",
+    "angular-local-storage": "~0.1.5",
+    "angular-queue": "~0.0.2",
+    "angular-messages": "~1.3.11"
   }
 }
