--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "angular-jwt": "~0.0.6",
     "angular-local-storage": "~0.1.5",
     "angular-queue": "~0.0.2",
-    "angular-messages": "~1.3.11"
+    "angular-messages": "~1.3.11",
+    "jquery-waypoints": "~3.1.1",
+    "angulartics": "~0.17.2"
   }
 }
